<resources>
    <string name="app_name">ECommerce_Mobile_App</string>
    <string name="shop_cart">Trendify</string>
    <string name="online_market"><font color="#2a3577">Online</font><font color="#FF5722"> Market</font></string>
    <string name="my_cart">My Cart</string>
    <string name="cart_empty_view_text">Your Cart is Empty</string>
    <string name="checkout">Checkout</string>
    <string name="order_summary">Order Summary</string>
    <string name="sub_total">Sub Total</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="tax_fee">Tax</string>
    <string name="lkr">LKR-</string>
    <string name="lkr1">LKR.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="qty">0</string>
    <string name="total">Total</string>
    <string name="title_cart_view_holder">Title</string>
    <string name="title_brand_view_holder">Title</string>
    <string name="intro_title"> <font color="#2a3577">Discover Your Next\n</font><font color="#FF5722">Favorite Find!</font></string>
    <string name="sub_title"><font color="#2a3577">Shop the latest trends,unique products, and unbeatable deals all at your fingertips!</font></string>
    <string name="product_info"><font color="#000000">Shop the latest trends,unique products, and unbeatable deals all at your fingertips.Shop the latest trends,unique!Shop the latest trends,unique products, and unbeatable deals all at your fingertips.</font></string>
    <string name="contact_info">Contact Information</string>
    <string name="pvt_email">ahjssdias01@gmail.com</string>
    <string name="email">Email</string>
    <string name="pvt_phone">+94 75 146 1085</string>
    <string name="phone">Phone</string>
    <string name="pvt_address">32, Rose Garden, Kadawatha</string>
    <string name="address">Address</string>
    <string name="pay_method">Payment Method</string>
    <string name="amex">American Express</string>
    <string name="get_start_btn">Get Started</string>
    <string name="app_heading">App Name</string>
    <string name="welcome">Hello Again!</string>
    <string name="login_description">Welcome Back You\'ve Been Missed!</string>
    <string name="email_address">Email Address</string>
    <string name="pwd">Password</string>
    <string name="remember">Remember Me</string>
    <string name="recovery_pwd">Recovery Password</string>
    <string name="choice">Or Sign In with</string>
    <string name="signup_choice">Don\'t have an account? <b>Sign Up for Free</b></string>
    <string name="signup">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="signup_description">Let\'s Create an Account</string>
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="nic">NIC Number</string>
    <string name="sign_in_choice">Already have an account? <b>Sign In</b></string>
    <string name="w_back">Welcome Back!</string>
    <string name="name_here">%1$s %2$s</string>
    <string name="categ">Categories</string>
    <string name="see_all">See All</string>
    <string name="pop">Popular Products</string>
    <string name="home">Home</string>
    <string name="wishlist">Wishlist</string>
    <string name="order">My Order</string>
    <string name="cart">Cart</string>
    <string name="name">Name</string>
    <string name="first_name">Janithya</string>
    <string name="last_name">Dias</string>
    <string name="nic_no">NIC No.</string>
    <string name="r_name">Janithya Dias</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="pay_success">Your Payment is Successful.</string>
    <string name="backToShop">Back to Shopping</string>
    <string name="stockStatus">In Stock</string>
    <string name="productDescrip">Product Description</string>
    <string name="descrip">Description</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="vendor_detail">Vendor Name</string>
    <string name="vendor_n">Janu D</string>
    <string name="checkout_cart">Cart Products</string>
    <string name="customer_s_f_name">Customer\'s First Name</string>
    <string name="customer_s_l_name">Customer\'s Last Name</string>
    <string name="customer_s_f">Janithya</string>
    <string name="customer_s_l">Dias</string>
    <string name="create_order">Create Order</string>
    <string name="order_track">Order Tracking</string>
    <string name="order_tracking">Order Tracking Details</string>
    <string name="o_date">Order Date</string>
    <string name="o_recipient_name">Recipient Name</string>
    <string name="o_recipient_contact">Recipient Contact No.</string>
    <string name="o_recipient_address">Recipient Address</string>
    <string name="o_customer_name">Customer Name</string>
    <string name="order_status">Order Status</string>
    <string name="order_cancellation">Order Cancellation</string>
    <string name="order_cancellation_btn">Order Cancellation</string>
    <string name="order_cancellation_q">Are you sure you want to request a cancellation for this order?</string>
    <string name="order_cancellation_r_note">Type note if any</string>
    <string name="order_status_stage">Delivered</string>
    <string name="order_id">Order ID</string>
    <string name="my_orders">My Orders</string>
    <string name="o_status">Order Processing</string>
    <string name="track_btn">Track</string>
    <string name="deactivate">Account Deactivation</string>
    <string name="deactivate_note">Ensuring that the user understand the\n consequences of deactivating their account (<b><i>loss of data, subscription, etc.</i></b>)</string>
    <string name="o_product_name">Product Name</string>
    <string name="o_product_v_name">Vendor Name</string>
    <string name="notifications">Notifications</string>
    <string name="notification_msg">Notification Message</string>
    <string name="notification_date">Date</string>
    <string name="comment">Comment</string>
    <string name="add_comment">Add Comment</string>
    <string name="add_your_comment">Write your comment here</string>

    <string name="edit_icon_description">Edit Contact Information</string>
    <string name="phone_icon_description">Phone Icon</string>
    <string name="address_icon_description">Address Icon</string>
    <string name="user_icon_description">User Icon</string>
    <string name="search_icon_description">Search Icon</string>
    <string name="email_icon_description">Email Icon</string>
    <string name="shoe_img_description">Shoe Image</string>
    <string name="back_button_description">Back</string>
    <string name="star_icon_description">Star Rating Icon</string>
    <string name="logo_description">Logo Image</string>
    <string name="login_icon_description">Logo Image</string>
    <string name="fb_icon_description">Fb Image</string>
    <string name="google_icon_description">Google Image</string>
    <string name="logout_icon_description">Logout Button</string>
    <string name="email_description">Email input field</string>
    <string name="payment_success_description">Payment Success</string>
    <string name="main_logo_description">Logo Description</string>
    <string name="rate_me">Rate me</string>
    <string name="if_you_are_enjoy_using_our_app_would_you_mind_rating_us">If you are enjoy using our app,would you mind rating us..</string>
    <string name="remarks">Remarks</string>
    <string name="may_be_later">May Be, later</string>
    <string name="rate_now">Rate Now</string>
    <string name="profile_details">Profile</string>
    <string name="comments">Comments</string>
    <string name="rate_image">Rate Image</string>
    <string name="rate_title">Rate Me</string>
    <string name="order_image">Order Image</string>
    <string name="rate_description">If you enjoyed purchasing from our store, would you mind rating your experience with us? Your feedback helps us improve and continue providing the best service possible.</string>

</resources>