<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/dark_moderate_blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/r1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@id/card_view"
        android:padding="28dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/shopping_cart_icon"
            android:contentDescription="@string/login_icon_description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/app_heading"
            android:textColor="@color/grey_bg"
            android:textSize="32sp"
            android:textStyle="bold" />


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp"
        android:id="@+id/card_view"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/welcome"
                android:textColor="@color/dark_moderate_blue"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="@font/poppins"
                android:text="@string/login_description" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>

            <TextView
                android:id="@+id/email_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/email_address"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/done_icon"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/pwd"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/pwd_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/password_icon"
                android:inputType="textPassword"
                android:autofillHints="password" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remember"
                    android:fontFamily="@font/poppins"
                    android:layout_centerVertical="true"
                    android:alpha="0.7"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/poppins"
                    android:text="@string/recovery_pwd"
                    android:alpha="0.7"/>

            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signinbtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/dark_moderate_blue_bg"
                android:fontFamily="@font/poppins"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:clickable="true"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha="0.7"
                android:fontFamily="@font/poppins"
                android:text="@string/choice" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="12dp"
                    android:background="@drawable/fb"
                    android:contentDescription="@string/fb_icon_description"/>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="12dp"
                    android:background="@drawable/google"
                    android:contentDescription="@string/google_icon_description"/>


            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <TextView
                android:id="@+id/register_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins"
                android:clickable="true"
                android:text="@string/signup_choice" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>
