<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerEditProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="50dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="32dp">

                <ImageView
                    android:id="@+id/editProfileBackBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:padding="8dp"
                    android:background="@drawable/grey_bg_circle"
                    android:contentDescription="@string/back_button_description"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/baseline_arrow_back_ios_new_24" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/profile"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/logoutbtn"
                    app:layout_constraintStart_toEndOf="@+id/editProfileBackBtn"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/logoutbtn"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_marginEnd="16dp"
                    android:padding="8dp"
                    android:background="@drawable/grey_bg_circle"
                    android:contentDescription="@string/logout_icon_description"
                    app:tint="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/baseline_logout_24" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp">


                <ImageView
                    android:id="@+id/imageView25"
                    android:contentDescription="@string/profile"
                    android:padding="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/eprofile" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="32dp"
                android:paddingTop="16dp"
                android:paddingEnd="32dp"
                android:paddingBottom="20dp">


                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_profile"
                    android:fontFamily="@font/poppins"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark_moderate_blue"
                    android:layout_marginBottom="12dp"/>

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/f_name"
                    android:fontFamily="@font/poppins"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/fNameTxt"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:textSize="14sp"
                    android:inputType="textPersonName"
                    android:autofillHints="name"
                    android:fontFamily="@font/poppins"
                    android:text="@string/first_name"
                    android:hint="@string/f_name"
                    android:labelFor="@id/textView19"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/l_name"
                    android:fontFamily="@font/poppins"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/lNameTxt"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/last_name"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins"
                    android:layout_marginBottom="8dp"
                    android:inputType="textPersonName"
                    android:autofillHints="name"
                    android:hint="@string/l_name"
                    android:labelFor="@id/textView21"/>

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nic"
                    android:fontFamily="@font/poppins"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/nICNoTxt"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/nic_no"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins"
                    android:layout_marginBottom="8dp"
                    android:inputType="text"
                    android:autofillHints="name"
                    android:hint="@string/nic"
                    android:labelFor="@id/textView25"/>

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:fontFamily="@font/poppins"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/postalAddressTxt"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/pvt_address"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins"
                    android:layout_marginBottom="8dp"
                    android:inputType="textPostalAddress"
                    android:autofillHints="postalAddress"
                    android:hint="@string/address"
                    android:labelFor="@id/textView27"/>

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_address"
                    android:fontFamily="@font/poppins"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/emailAddressTxt"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/pvt_email"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins"
                    android:layout_marginBottom="8dp"
                    android:inputType="textEmailAddress"
                    android:autofillHints="emailAddress"
                    android:hint="@string/nic"
                    android:labelFor="@id/textView29"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/editProfileDetailsBtn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/dark_moderate_blue_bg"
                    android:fontFamily="@font/poppins"
                    android:text="@string/edit_profile"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:layout_marginTop="20dp"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="32dp"
                android:paddingTop="24dp"
                android:paddingEnd="32dp"
                android:paddingBottom="20dp">


                <TextView
                    android:id="@+id/textView39"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deactivate"
                    android:fontFamily="@font/poppins"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark_moderate_blue"
                    android:layout_marginBottom="14dp" />

                <TextView
                    android:id="@+id/textView41"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deactivate_note"
                    android:textAlignment="center"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/red"
                    android:textStyle="italic"
                    android:layout_marginBottom="18dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/deactivationBtn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/dark_moderate_blue_bg"
                    android:fontFamily="@font/poppins"
                    android:text="@string/deactivate"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>