<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    app:cardElevation="15dp"
    android:layout_margin="8dp"
    android:backgroundTint="@android:color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="12dp">

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/shop_cart"
            app:srcCompat="@drawable/shoppingbag" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/notification_msg"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="18dp"
                android:layout_marginTop="13dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/notification_date"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/tvMessage"
                app:layout_constraintTop_toBottomOf="@+id/tvMessage" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/star_icon_description"
            app:srcCompat="@drawable/delete"
            app:tint="@color/red"
            android:layout_marginStart="16dp"
            android:layout_marginTop="13dp"/>


    </LinearLayout>
</androidx.cardview.widget.CardView>

